# bagh-chal

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  format.cfg  format.sh  meson.build  run_tests.sh  update_mirror.sh
guides/: git_mirror.md  train_termbox.md
src/: ai.h  ai_heuristic.c  ai_heuristic.h  ai_rand.c  ai_rand.h  ai_simple_heuristic.c  ai_simple_heuristic.h  game.c  game.h  graphics.h  graphics_minimalist_sdl.c  graphics_minimalist_sdl.h  graphics_tb.c  graphics_tb.h  graphics_test.c  graphics_test.h  main_minimalist_sdl.c  main_tb.c  matrix.c  matrix.h  menu.c  menu.h  menu_test.c  menu_test.h  models.c  models.h  neuralnet.c  neuralnet.h  randn.c  randn.h  stack.c  stack.h  term_main.c  termbox_graphics.c  termbox_graphics.h  test.c  test.h  test_game.c  test_graphics_minimalist_sdl.c  test_graphics_tb.c  (+22 more)
